# Viche

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Architecture.md  Plan_1.md  Plan_2.md  README.md  Scaffold_Plan.md  TechnicalTask.md  The Viche Manifesto.md  Viche Mandate Protocol.md  Viche Public Memorandum.md  compose.yaml  deep-research-report.md  package-lock.json  package.json  stack.md  Маніфест Віче.md  Протокол мандата Віче.md
.github/workflows/: ci.yaml
apps/web/: Dockerfile  next-env.d.ts  next.config.ts  package.json  tailwind.config.ts
docs/adr/: 0001-stack.md  0002-journal-first.md  0003-identity-separation.md  0004-ukrainian-canonical-language.md
docs/api/: public-api.md
docs/operations/: correspondence-runbook.md  development.md  incident-response.md  moderation-runbook.md  sortition-runbook.md
infra/compose/: compose.yaml
services/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
services/api/app/: __init__.py  main.py
services/api/app/api/routes/: federation.py  health.py  members.py  panels.py  proposals.py  public.py  sortition.py  system.py
services/api/app/core/: __init__.py  config.py
services/api/app/db/: __init__.py  base.py  models.py  session.py
services/api/app/domain/: __init__.py  journal.py  roadmap.py
services/api/app/schemas/: __init__.py  members.py  panels.py  proposals.py  sortition.py
services/api/migrations/: env.py
services/api/migrations/versions/: 20260513_0001_core_tables.py  20260514_0002_sortition_tables.py  20260516_0003_panels_resolutions.py
services/api/tests/: test_health.py
(+8 files in other folders)
